Kubernetes/3.service/Ingress(contour)/test2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2-ui
  labels:
    app: nginx2-ui
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx2-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx2-ui
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx2-ui
        tier: frontend
        secgroup: web-tier
    spec:
      containers:
      - name: nginx2-ui
        image: nginxdemos/hello
        imagePullPolicy: Always
        ports:
        - containerPort: 80
